# pydantic-firebase

./: firesetup.py  main.py  pyproject.toml
firestore/: __init__.py  db_collection.py  db_document.py  db_reference.py  utils.py
idantic/: firestore.py
pydantic_firebase/: __init__.py  db_collection.py  db_document.py  utils.py
tests/test_firestore/: conftest.py  test_.py  test_set_posts_to_db.py
